reformulando pra não plagear o site

--- a/planos.html
+++ b/planos.html
@@ -28,28 +28,28 @@
             <div class="content">
                 <!-- Aqui vai o seu conteúdo -->
                 <div class="comteiner-da-imagem-e-h" >
-                    <img src="https://institucional.amil.com.br/sites/institucional/files/users/user56/amil_facil.jpg" alt="">
+                    <H1>DEV PLANO</H1>
                     <h2>R$ 80,99</h2>
                     <div>
                         <button>Contrata Plano</button>
                     </div>
                 </div>
                 <div class="comteiner-da-imagem-e-h" >
-                    <img id="images-a-esquerda" src="https://institucional.amil.com.br/sites/institucional/files/users/user56/amil.jpg" alt="">
+                    <H1>DEV JR</H1>
                     <h2>R$ 150,00</h2>
                     <div>
                         <button>Contrata Plano</button>
                     </div>
                 </div>
                 <div class="comteiner-da-imagem-e-h" >
-                    <img src="https://institucional.amil.com.br/sites/institucional/files/users/user56/amil_one.jpg" alt="">
+                    <H1>DEV ADULTO</H1>
                     <h2>R$ 250,00</h2>
                     <div>
                         <button>Contrata Plano</button>
                     </div>
                 </div>
                 <div class="comteiner-da-imagem-e-h" >
-                    <img src="https://institucional.amil.com.br/sites/institucional/files/users/user56/amil_dental.jpg" alt="">
+                    <H1>DEV ANCIÃO</H1>
                     <h2>R$ 350,00</h2>
                     <div>
                         <button>Contrata Plano</button>
