--- a/planos.html
+++ b/planos.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <div class="menu">
-            <a id="link-logo" href="index.html"><img id="logo-amil" src="https://institucional.amil.com.br/sites/institucional/files/amil.png" alt="Logo da amil"></a>
+            <a><H1>DEV AMIL</H1></a>
             <!-- Aqui vai o seu menu -->
             <ul>
                 <li><a href="index.html">Inicio</a></li>
