--- a/planos.html
+++ b/planos.html
@@ -28,28 +28,28 @@
             <div class="content">
                 <!-- Aqui vai o seu conteúdo -->
                 <div class="comteiner-da-imagem-e-h" >
-                    <H1>DEV PLANO</H1>
+                    <h2>DEV PLANO</h2>
                     <h2>R$ 80,99</h2>
                     <div>
                         <button>Contrata Plano</button>
                     </div>
                 </div>
                 <div class="comteiner-da-imagem-e-h" >
-                    <H1>DEV JR</H1>
+                    <h2>DEV JR</h2>
                     <h2>R$ 150,00</h2>
                     <div>
                         <button>Contrata Plano</button>
                     </div>
                 </div>
                 <div class="comteiner-da-imagem-e-h" >
-                    <H1>DEV ADULTO</H1>
+                    <h2>DEV ADULTO</h2>
                     <h2>R$ 250,00</h2>
                     <div>
                         <button>Contrata Plano</button>
                     </div>
                 </div>
                 <div class="comteiner-da-imagem-e-h" >
-                    <H1>DEV ANCIÃO</H1>
+                    <h2>DEV ANCIÃO</h2>
                     <h2>R$ 350,00</h2>
                     <div>
                         <button>Contrata Plano</button>
